--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^2.0.0",
     "mini-css-extract-plugin": "^2.7.6",
+    "mongodb": "^6.1.0",
     "next": "latest",
     "next-auth": "^4.23.2",
     "react": "latest",
