--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@auth/mongodb-adapter": "^2.0.0",
     "mini-css-extract-plugin": "^2.7.6",
     "mongodb": "^6.1.0",
+    "mongoose": "^7.5.3",
     "next": "latest",
     "next-auth": "^4.23.2",
     "react": "latest",
