--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 GOOGLE_ID="97549967050-s12djm4kia76an00sf31g3h5i549up02.apps.googleusercontent.com"
 GOOGLE_SECRET="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"
 MONGODB_URI="mongodb+srv://ecommerce:ecommerce123@cluster0.h6t0akg.mongodb.net/?retryWrites=true&w=majority"
+S3_ACCESS_KEY="AKIAWSVVKJ4VNYA3X7OW"
+S3_SECRET_ACCESS_KEY="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"
