--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@auth/mongodb-adapter": "^2.0.0",
     "@aws-sdk/client-s3": "^3.425.0",
+    "@next-auth/mongodb-adapter": "^1.1.3",
     "axios": "^1.5.1",
     "mime-types": "^2.1.35",
     "mini-css-extract-plugin": "^2.7.6",
